SOme fixes for modal favorites on mobile added
Took 5 minutes

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -451,14 +451,14 @@ h1
       display: flex
       position: absolute
       right: 50px
-      bottom: 30px
+      bottom: 70px
       z-index: 21
       border: 1px solid #495FEF
     .close-button
       display: none
     .fav-list
       height: auto !important
-      max-height: calc(100vh - 190px)
+      max-height: calc(100vh - 316px)
       overflow: scroll
       .fav-item
         grid-template-columns: repeat(1, 1fr)
